# 10-Day-AI-ML-Agentic-Systems-sprint

eta-predictor/: .dockerignore  Dockerfile  docker-compose.yml  mlflow.db  pyproject.toml
eta-predictor/app/: main.py  predictor.py  schemas.py
eta-predictor/data/raw/: logistics_eta.csv
eta-predictor/mlartifacts/1/models/m-08a42eae7d3848ebac9efa758c3479e2/artifacts/: MLmodel  model.pkl
eta-predictor/mlartifacts/1/models/m-0d09d5e065774f30b05572012fdf46f2/artifacts/: MLmodel  input_example.json
eta-predictor/mlartifacts/1/models/m-2c1774f073314e1e8a08ff84465da455/artifacts/: MLmodel
eta-predictor/mlartifacts/1/models/m-60bc4ce58ca646b5be5214468ae27760/artifacts/: MLmodel  model.pkl
eta-predictor/mlartifacts/1/models/m-67a960d596b944f8ac06b3b105d14322/artifacts/: MLmodel
eta-predictor/mlartifacts/1/models/m-719dac7a3b0a410ca6a9439f111d8ac7/artifacts/: MLmodel
eta-predictor/mlartifacts/1/models/m-903be3289aec4c97afcea8ce7115f4b0/artifacts/: MLmodel  model.pkl  python_env.yaml
eta-predictor/mlartifacts/1/models/m-b4e5031331c34b3aada5f5b636d1a539/artifacts/: MLmodel  conda.yaml
eta-predictor/mlartifacts/1/models/m-b60c10dfe127418a8512bdb737666527/artifacts/: MLmodel  model.pkl  serving_input_example.json
eta-predictor/mlartifacts/1/models/m-bbeaf428c6504fe2b3fc8d7499a87425/artifacts/: MLmodel
eta-predictor/mlflow-artifacts/1/17e6bcd3f64948f0a5b3a2c241ea02e4/artifacts/: notes.txt
eta-predictor/models/: eta_model_latest.joblib
eta-predictor/scripts/: first_mlflow_run.py  generate_data.py  train.py
eta-predictor/tests/: test_api.py  test_schemas.py
(+1 files in other folders)
