[project]
name = "eta-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=2.2,<3.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "mlflow (>=3.11.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "eta_predictor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]
